# diia-ai-role-llm-overrated

./: deploy.sh  docker-compose.prod.yaml  docker-compose.yaml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  config.py  configuration.py  data_models.py  helper.py  main.py  requirements.txt  services.py
frontend/: .dockerignore  .env.production.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: DiiaTranslationApp.jsx  api.js  main.jsx
nginx/: nginx.conf
nginx/conf.d/: default.conf  ssl.conf
ocr/: .gitignore  Dockerfile  README.md  commands.txt  lambda_function.py  main.py  pyproject.toml  requirements.txt  server.py
ocr/ocr_engine/: __init__.py  base.py  cli.py  data_models.py  engine.py  models.py  visualization.py
ocr/ocr_engine/providers/: cloud_vision.py  textract.py
ocr/tests/: test_document_loading.py  test_serialization.py
text-filler/: .gitignore  Dockerfile  README.md  commands.txt  lambda_function.py  main.py  pyproject.toml  requirements.txt
text-filler/text_filler/: background_inpainter.py  models.py  text_inpainter.py  visualization.py
translation/: Dockerfile  README.md  build.sh  lambda_function.py  pyproject.toml  requirements.txt  run.sh
translation/src/: data_models.py  engine.py  helper.py  injection_detector.py  main.py  server.py  transliteration.py
