[project]
name = "ocr-engine"
version = "0.1.0"
description = "Vendor-agnostic OCR engine with Amazon Textract support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.41.2",
    "click>=8.3.1",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.12.4",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
]

[project.scripts]
ocr-cli = "ocr_engine.cli:process"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
