[project]
name = "ocr-engine"
version = "0.1.0"
description = "Vendor-agnostic OCR engine with Amazon Textract support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.41.2",
    "click>=8.3.1",
    "fastapi>=0.121.3",
    "google-cloud-vision>=3.11.0",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.12.4",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "rootutils>=1.0.7",
    "uvicorn>=0.38.0",
]

[project.scripts]
ocr-cli = "ocr_engine.cli:process"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.ruff.lint]
ignore = ["E402"]
