[project]
name = "text-filler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.41.2",
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "ipython>=9.7.0",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.12.4",
    "pymupdf>=1.26.6",
    "reportlab>=4.4.5",
]
