[project]
name = "diia-hacathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.41.2",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "sagemaker==2.251.1",
    "uvicorn>=0.38.0",
]
